--- a/SmartGameAgent/src/index.html
+++ b/SmartGameAgent/src/index.html
@@ -1,39 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
-    <script type="module" src="/main.js" defer></script>
-  </head>
 
-  <body>
-    <main class="container">
-      <h1>Welcome to Tauri</h1>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>POKEBOT</title>
+  <script type="module" src="/main.js" defer></script>
+</head>
 
-      <div class="row">
-        <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
-        </a>
-      </div>
-      <p>Click on the Tauri logo to learn more about the framework</p>
+<body>
+  <main class="container">
+    <header class="header">
+      <h1>POKEBOT</h1>
+      <img src="/assets/magickarp.png" alt="Magikarp troféu" class="logo" />
 
-      <form class="row" id="greet-form">
-        <input id="greet-input" placeholder="Enter a name..." />
-        <button type="submit">Greet</button>
-      </form>
-      <p id="greet-msg"></p>
-    </main>
-  </body>
+    </header>
+
+    <section class="content">
+      <!-- Espaço para futuras funcionalidades -->
+      <h2>Seja bem-vindo ao POKEBOT!</h2>
+    </section>
+
+    <footer>
+      <button class="start-btn">Start</button>
+    </footer>
+  </main>
+</body>
+
 </html>
