Botão de Configurações

--- a/SmartGameAgent/src/index.html
+++ b/SmartGameAgent/src/index.html
@@ -7,10 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>POKEBOT</title>
   <script type="module" src="/main.js" defer></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
   <main class="container">
+    <a href="/pages/config.html" class="settings-link">
+      <span class="material-icons">settings</span>
+    </a>
     <header class="header">
       <h1>POKEBOT</h1>
       <img src="/assets/magickarp.png" alt="Magikarp troféu" class="logo" />
