--- a/SmartGameAgent/src/pages/config.html
+++ b/SmartGameAgent/src/pages/config.html
@@ -7,10 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BOT POKEMMO</title>
   <script type="module" src="/main.js" defer></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
-  <a href="index.html">Voltar</a>
+  <a href="index.html" class="settings-link">
+    <span class="material-icons">home</span>
+  </a>
+
   configuracoes
 </body>
 
